@@ -494,7 +494,7 @@ def tau_skimselection(tau):
 
     if not (tau.pt > 15*GeV) : return False
     if not (tau.numTrack == 1 or tau.numTrack == 3) : return False
-        #if not (tau.JetBDTSigLoose == 1) : return False
+    if not (tau.JetBDTSigLoose == 1) : return False
     if not (abs(tau.eta) < 2.5) : return False
 
     return True
@@ -631,6 +631,11 @@ def jet_selection(jet):
     """ Finalizes the jet selection """
 
     if not (jet.pt > 25*GeV) : return False
+        
+    #Protection against bunny ear jets
+    if (2.5 < abs(jet.eta) < 3.5):
+        if not (jet.pt > 30*GeV) : return False
+
     if not (abs(jet.eta) < 4.5) : return False
     if (abs(jet.eta) < 2.4):
         if not (jet.jvtxf > 0.75) : return False
